[package]
name = "x11-sentinel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
x11rb = { version = "0.9.0", features = ["xinput", "randr"] }
os_info = "2.0.2"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"
notify-rust = "4"
uuid = { version = "1.0.0", features = ["v4"] }
timer = "0.2.0"
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }

[[bin]]
name = "x11-sentinel-client"
path = "src/main.rs"
